--- a/SaneScanner/SYLaunchScreen.storyboard
+++ b/SaneScanner/SYLaunchScreen.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,10 +14,6 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Llm-lL-Icb"/>
-                        <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -32,11 +29,12 @@
                         <constraints>
                             <constraint firstItem="mM3-BF-NaT" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8VK-HW-mBu"/>
                             <constraint firstItem="mM3-BF-NaT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="GPg-j3-q3F"/>
-                            <constraint firstItem="GRI-Y4-T81" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="I2W-VE-hr5"/>
+                            <constraint firstItem="GRI-Y4-T81" firstAttribute="centerX" secondItem="U3s-QK-NhV" secondAttribute="centerX" id="I2W-VE-hr5"/>
                             <constraint firstItem="GRI-Y4-T81" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="WaT-f3-CYu"/>
                             <constraint firstAttribute="trailing" secondItem="mM3-BF-NaT" secondAttribute="trailing" id="boE-Wa-ySG"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="mM3-BF-NaT" secondAttribute="bottom" id="myR-2A-pac"/>
+                            <constraint firstAttribute="bottom" secondItem="mM3-BF-NaT" secondAttribute="bottom" id="myR-2A-pac"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="U3s-QK-NhV"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
