Update SYSanePreviewView to Swift

--- a/SaneScanner/PreviewCell.xib
+++ b/SaneScanner/PreviewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="265" height="198.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XJn-R6-iZv" customClass="SYSanePreviewView">
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XJn-R6-iZv" customClass="SanePreviewView" customModule="SaneScanner" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="265" height="198.5"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
