--- a/SaneScanner/HostCell.xib
+++ b/SaneScanner/HostCell.xib
@@ -12,24 +12,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="KGk-i7-Jjw" customClass="HostCell" customModule="SaneScanner" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="63" id="KGk-i7-Jjw" customClass="HostCell" customModule="SaneScanner" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="286" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="286" height="62.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOy-jL-WLv">
-                        <rect key="frame" x="16" y="11" width="262" height="22"/>
+                        <rect key="frame" x="16" y="15" width="262" height="33"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="GOy-jL-WLv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="7jf-Hy-axb"/>
+                    <constraint firstItem="GOy-jL-WLv" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="4" id="7jf-Hy-axb"/>
                     <constraint firstItem="GOy-jL-WLv" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="HLh-ga-rqq"/>
-                    <constraint firstItem="GOy-jL-WLv" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="QR6-Re-Fui"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="GOy-jL-WLv" secondAttribute="bottom" constant="4" id="QR6-Re-Fui"/>
                     <constraint firstAttribute="trailingMargin" secondItem="GOy-jL-WLv" secondAttribute="trailing" id="X7l-nG-Yuj"/>
                 </constraints>
             </tableViewCellContentView>
@@ -37,6 +37,7 @@
             <connections>
                 <outlet property="label" destination="GOy-jL-WLv" id="ed9-tT-wcd"/>
             </connections>
+            <point key="canvasLocation" x="137.59999999999999" y="162.3688155922039"/>
         </tableViewCell>
     </objects>
 </document>
