--- a/SaneScanner/PreferencesVC.xib
+++ b/SaneScanner/PreferencesVC.xib
@@ -32,7 +32,7 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="3du-Yi-VLC" secondAttribute="trailing" id="3b0-pm-Tmg"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="3du-Yi-VLC" secondAttribute="bottom" id="VQt-EM-1qm"/>
+                <constraint firstAttribute="bottom" secondItem="3du-Yi-VLC" secondAttribute="bottom" id="VQt-EM-1qm"/>
                 <constraint firstItem="3du-Yi-VLC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="f1v-gR-9C2"/>
                 <constraint firstItem="3du-Yi-VLC" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="zZo-mX-9d7"/>
             </constraints>
