Finish dynamic type support

--- a/SaneScanner/DeviceVC.xib
+++ b/SaneScanner/DeviceVC.xib
@@ -32,7 +32,7 @@
                     <rect key="frame" x="0.0" y="622" width="375" height="45"/>
                     <color key="backgroundColor" red="0.1843137255" green="0.48627450979999998" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="Vwb-be-UYH"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="Vwb-be-UYH"/>
                     </constraints>
                     <state key="normal" title="Scan">
                         <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
