--- a/SaneScanner/DeviceVC.xib
+++ b/SaneScanner/DeviceVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -21,39 +21,42 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Nhb-4q-vLD">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="622"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="625"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="TdB-6e-UMh"/>
                         <outlet property="delegate" destination="-1" id="e1o-5T-Nsg"/>
                     </connections>
                 </tableView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qgu-vW-uKT">
-                    <rect key="frame" x="0.0" y="622" width="375" height="45"/>
-                    <color key="backgroundColor" red="0.1843137255" green="0.48627450979999998" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="45" id="Vwb-be-UYH"/>
-                    </constraints>
-                    <state key="normal" title="Scan">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                    <connections>
-                        <action selector="scanButtonTap" destination="-1" eventType="touchUpInside" id="BAj-9P-NOl"/>
-                    </connections>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="hfj-fG-na9">
+                    <rect key="frame" x="0.0" y="625" width="375" height="42"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qgu-vW-uKT" customClass="ScanButton" customModule="SaneScanner" customModuleProvider="target">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="42"/>
+                            <color key="backgroundColor" red="0.1843137255" green="0.48627450979999998" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                            <state key="normal" title="Scan">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="scanButtonTap" destination="-1" eventType="touchUpInside" id="BAj-9P-NOl"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="qgu-vW-uKT" secondAttribute="bottom" id="OGU-Zl-inL"/>
-                <constraint firstAttribute="trailing" secondItem="qgu-vW-uKT" secondAttribute="trailing" id="bK7-w8-Xg6"/>
+                <constraint firstItem="hfj-fG-na9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ia4-oF-v5R"/>
+                <constraint firstItem="hfj-fG-na9" firstAttribute="top" secondItem="Nhb-4q-vLD" secondAttribute="bottom" id="nLI-Iw-YLo"/>
                 <constraint firstItem="Nhb-4q-vLD" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="qRl-F9-p22"/>
-                <constraint firstItem="qgu-vW-uKT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rh7-cK-Pdl"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="hfj-fG-na9" secondAttribute="bottom" id="rDq-WI-6IO"/>
                 <constraint firstAttribute="trailing" secondItem="Nhb-4q-vLD" secondAttribute="trailing" id="tlb-Ot-eIv"/>
-                <constraint firstItem="qgu-vW-uKT" firstAttribute="top" secondItem="Nhb-4q-vLD" secondAttribute="bottom" id="ygH-Ge-lEa"/>
+                <constraint firstAttribute="trailing" secondItem="hfj-fG-na9" secondAttribute="trailing" id="yOx-gE-MDa"/>
                 <constraint firstItem="Nhb-4q-vLD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="z9q-9T-syU"/>
             </constraints>
-            <point key="canvasLocation" x="138" y="144"/>
+            <point key="canvasLocation" x="136.80000000000001" y="143.47826086956522"/>
         </view>
     </objects>
 </document>
