--- a/SaneScanner/GalleryGridVC.xib
+++ b/SaneScanner/GalleryGridVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -38,10 +38,10 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wg3-JL-Rpe">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No content" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2x-d3-oB3">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" text="No content" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K2x-d3-oB3">
                             <rect key="frame" x="145.5" y="323.5" width="84.5" height="20.5"/>
                             <constraints>
-                                <constraint firstAttribute="width" relation="lessThanOrEqual" constant="300" id="X7z-i5-gxY"/>
+                                <constraint firstAttribute="width" relation="lessThanOrEqual" priority="751" constant="300" id="X7z-i5-gxY"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
@@ -51,6 +51,7 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="K2x-d3-oB3" firstAttribute="centerY" secondItem="Wg3-JL-Rpe" secondAttribute="centerY" id="LMf-2u-iwe"/>
+                        <constraint firstItem="K2x-d3-oB3" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Wg3-JL-Rpe" secondAttribute="leading" constant="20" id="knf-Ec-hvg"/>
                         <constraint firstItem="K2x-d3-oB3" firstAttribute="centerX" secondItem="Wg3-JL-Rpe" secondAttribute="centerX" id="mso-H0-lJS"/>
                     </constraints>
                 </view>
